Moved gut dependency to a separate workspace crate
This allows me to iterate on changes to gut more easily without having
to publish it every time.

--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -9,9 +9,9 @@ name = "cimplicits"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+geo = { path = "../geo" }
 implicits = { path = "../implicits" }
 reinterpret = "0.2"
-gut = { version = "0.3", features = ["io"] }
 
 [build-dependencies]
 cbindgen = "0.6"
