--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ exclude = [
 ]
 
 [profile.release]
-debug = false # Change this to true to enable debug symbols in release mode
+debug = true # Change this to true to enable debug symbols in release mode
 rpath = false
