--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -17,15 +17,15 @@ num-traits = "0.2"
 rayon = "1.2"
 autodiff = { version = "0.1", optional = true }
 packed_simd = { version = "0.3", optional = true }
+approx = { version = "0.3", optional = true }
 
 [dev-dependencies]
-approx = "0.3"
 cgmath = "0.17"
 criterion = "0.3"
 
 [features]
 unstable = ["criterion/real_blackbox", "packed_simd"]
-default = ["sprs"]
+default = ["sprs", "approx"]
 
 [[bench]]
 name = "sum"
