[softy] Finish implementation of shell bending
Also refactored preparing mesh attributes for simulation into the TriMeshShell struct
and the Object trait for generic routines. This refactor brings us closer to moving
away from using meshes for simulation towards using simulation specific data structures.

--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -25,6 +25,7 @@ af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git
 snafu = "0.5"
 lazycell = "1.2"
 log = "0.4"
+fnv = "1"
 
 [dev-dependencies]
 criterion = "0.3"
