--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -17,7 +17,7 @@ num-traits = "0.2"
 utils = { path = "../utils", features = ["autodiff"] }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
-snafu = "0.5"
+thiserror = "1.0.16"
 arrayvec = "0.5"
 log = "0.4"
 
