--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -23,7 +23,7 @@ sprs = "0.6.4"
 sprs-ldl = "0.4.1"
 ndarray = "0.12.1"
 af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
-snafu = "0.5"
+thiserror = "1.0.16"
 lazycell = "1.2"
 log = "0.4"
 fnv = "1"
