Updated gut + into_flat -> into_storage
Updated gut to git master dependency temporarily while we wait for
release of cgmath.
This caused a breaking change from flatk where it renamed into_flat to
into_storage.

--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-gut = { version = "0.5", features = ["io", "serde_all", "async-attribs"] }
+#gut = { version = "0.5", features = ["io", "serde_all", "async-attribs"] }
+#gut = { path = "../../gut", version = "0.5", features = ["io", "serde_all", "async-attribs"] }
+gut = { git = "https://github.com/elrnv/gut.git", features = ["io", "serde_all", "async-attribs"] }
