[soft] Update object data layout
This uses the new Entity derive macro from flatk to create more descriptive types describing vertex positions and velocities as well as generalized positions and velocities.
This type also allows sharing of the chunked layout implicitly.

--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 na = { package = "nalgebra", version = "0.18" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
+flatk = { git = "https://github.com/elrnv/flatk.git", features = ["rayon"] }
 ipopt = "0.5"
 geo = { path = "../geo" }
 rayon = "1.3"
