[implicits-hdk] Improve interface
Refactored the C facing api and added base radius capability.
This allows us to construct an implicit field with an absolute radius
rather than one relative to the size of the mesh, which is useful when
comparing implicit fields generated by the simulation, which keeps the
base radius constant throughout the sim.

--- a/implicits-hdk/Cargo.toml
+++ b/implicits-hdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "implicits-hdk"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
@@ -11,6 +11,7 @@ crate-type = ["staticlib", "rlib"]
 [dependencies]
 geo = { path = "../geo" }
 implicits = { path = "../implicits" }
+cimplicits = { path = "../cimplicits" }
 hdkrs = { path = "../hdkrs" }
 
 [build-dependencies]
