Update gut + switch to bytemuck where appropriate
Updated constructing meshes since with gut 0.6 uniform meshes now accept
vecs of arrays for indices instead of a flat array of indices. This
ensures that arrays have the correct size before they get passed into
gut.

--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 geo = { path = "../geo" }
 implicits = { path = "../implicits" }
-reinterpret = "0.2"
+bytemuck = "1.2"
 
 [build-dependencies]
 cbindgen = "0.14.3"
