[softy-hdk] Build houdini help and fix parameters
Fixed the Material Id parameter to display the correct Id (this is
probably a workaround to a Houdini bug).

--- a/softy-hdk/hdk/CMakeLists.txt
+++ b/softy-hdk/hdk/CMakeLists.txt
@@ -67,3 +67,8 @@ target_include_directories( ${library_name} PRIVATE
 
 # Sets several common target properties, such as the library's output directory.
 houdini_configure_target( ${library_name} )
+
+# Install documentation
+houdini_get_default_install_dir(INSTALLDIR)
+
+configure_file(src/hdk_softy.txt ${INSTALLDIR}/help/nodes/sop/hdk_softy.txt COPYONLY)
