--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -10,7 +10,7 @@ rayon = "1.3"
 na = { package = "nalgebra", version = "0.18" }
 hrbf = "0.2"
 geo = { path = "../geo" }
-flatk = { version = "0.3", features = ["rayon"] }
+flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.3", features = ["rayon"] }
 rstar = { version = "0.8" }
 autodiff = { version = "0.2", features = ["bytemuck"] }
 num-traits = "0.2"
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 thiserror = "1.0"
 arrayvec = "0.5"
 log = "0.4"
+hashbrown = "0.8"
 
 [dev-dependencies]
 approx = "0.3"
