[geo] Settle on latest gut version v0.6

--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -5,5 +5,4 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-#gut = { version = "0.5", features = ["io", "serde_all", "async-attribs"] }
-gut = { git = "https://gitlab.com/elrnv/gut.git", version = "0.6", features = ["io", "serde_all"], branch = "pre-cgmath-0.18" }
+gut = { version = "0.6", features = ["io", "serde_all"] }
