--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-na = { package = "nalgebra", version = "0.24" }
+na = { package = "nalgebra", version = "0.25" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.3" }
 ipopt = "0.5"
 geo = { path = "../geo" }
 rayon = "1.5"
-reinterpret = "0.1"
+reinterpret = "0.2"
+bytemuck = { version = "1.0", features = ["extern_crate_alloc"] }
 implicits = { path = "../implicits" }
 unroll = "0.1"
 approx = "0.4"
@@ -22,12 +23,12 @@ utils = { path = "../utils" }
 is_sorted = "0.1"
 sprs = "0.9.3"
 sprs-ldl = "0.7.0"
-ndarray = "0.13.1"
+ndarray = "0.14"
 af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
 thiserror = "1.0.16"
 lazycell = "1.2"
 log = "0.4"
-hashbrown = "0.8"
+hashbrown = "0.11"
 
 [dev-dependencies]
 criterion = "0.3"
