--- a/softy-hdk/Cargo.toml
+++ b/softy-hdk/Cargo.toml
@@ -6,17 +6,20 @@ edition = "2018"
 
 [lib]
 name = "softyhdk"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["staticlib", "rlib"]
 
 [dependencies]
 geo = { path = "../geo" }
 utils = { path = "../utils" }
 softy = { path = "../softy" }
 libc = "*"
-hdkrs = { path = "../hdkrs" }
+hdkrs = { path = "../../hdkrs/hdkrs" } #{ git = "https://github.com/elrnv/hdkrs.git" }
 lazy_static = "1.1"
 log = "0.4"
-env_logger = "0.7"
+env_logger = "0.8"
+cxx = "1.0"
 
 [build-dependencies]
-cbindgen = "0.14.2"
+cbindgen = "0.18"
+cxx-build = "1.0"
+cmake = { git = "https://github.com/elrnv/cmake-rs.git" }
