--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -12,6 +12,8 @@ crate-type = ["cdylib", "rlib"]
 geo = { path = "../geo" }
 implicits = { path = "../implicits" }
 bytemuck = "1.2"
+cxx = { version = "1.0", optional = true }
 
 [build-dependencies]
-cbindgen = "0.14.3"
+cbindgen = "0.18"
+
