[softy-hdk] Small fix + remove cbindgen dep
Fixed cmake config search dir in cmakelists

--- a/softy-hdk/hdk/CMakeLists.txt
+++ b/softy-hdk/hdk/CMakeLists.txt
@@ -18,10 +18,10 @@ endif()
 # specifying this path.
 list( APPEND CMAKE_PREFIX_PATH "$ENV{HFS}/toolkit/cmake" )
 
-list( APPEND CMAKE_PREFIX_PATH ".")
-
 file( READ "${CMAKE_BINARY_DIR}/rust/out_dir_hdkrs.txt" hdkrs_OUT_DIR )
 list( APPEND CMAKE_PREFIX_PATH "${hdkrs_OUT_DIR}/cmake")
+
+set( Softy_DIR "${CMAKE_SOURCE_DIR}")
 
 # Locate Houdini's libraries and header files.
 # Registers an imported library target named 'Houdini'.
