[softy] WIP setup
Add debug symbols to release builds and use local autodiff
implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,8 @@ exclude = [
 ]
 
 [profile.release]
-debug = false # Change this to true to enable debug symbols in release mode
+debug = true # Change this to true to enable debug symbols in release mode
 rpath = false
+
+[patch.crates-io]
+autodiff = {path = "../autodiff"}
