--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -31,6 +31,8 @@ log = "0.4"
 hashbrown = "0.11"
 autodiff = "0.3"
 rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+ron = "0.7"
 
 [dev-dependencies]
 criterion = "0.3"
