--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ rpath = false
 
 [patch.crates-io]
 autodiff = {git = "https://github.com/elrnv/autodiff.git"}
+meshx = {git = "https://github.com/elrnv/meshx.git"}
