--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 na = { package = "nalgebra", version = "0.29" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
-ipopt = "0.5"
+ipopt = { version = "0.5", optional = true }
 geo = { path = "../geo" }
 rayon = "1.5"
 reinterpret = "0.2"
@@ -41,6 +41,7 @@ env_logger = "0.9"
 
 [features]
 unstable = ["criterion/real_blackbox"]
+optsolver = ["ipopt"]
 
 [[bench]]
 name = "box_stretch"
@@ -53,3 +54,37 @@ harness = false
 [[bench]]
 name = "energy_hessian"
 harness = false
+
+[[test]]
+name = "rigid"
+required-features = ["optsolver"]
+[[test]]
+name = "bend_opt"
+required-features = ["optsolver"]
+[[test]]
+name = "box_opt"
+required-features = ["optsolver"]
+[[test]]
+name = "contact_opt"
+required-features = ["optsolver"]
+[[test]]
+name = "friction"
+required-features = ["optsolver"]
+[[test]]
+name = "multibody"
+required-features = ["optsolver"]
+[[test]]
+name = "one_tet"
+required-features = ["optsolver"]
+[[test]]
+name = "pinch"
+required-features = ["optsolver"]
+[[test]]
+name = "sim"
+required-features = ["optsolver"]
+[[test]]
+name = "three_tets_tetmesh"
+required-features = ["optsolver"]
+[[test]]
+name = "tube"
+required-features = ["optsolver"]
