Patch vtkio for mac builds + revert hdkrs dep
Mac builds fail on lzma dependency. This could be a conflict with
Houdini's libs. This is a quick fix. We don't use lzma compression
anyways.
Use hdkrs from git in softy-hdk as before.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ rpath = false
 
 [patch.crates-io]
 autodiff = {git = "https://github.com/elrnv/autodiff.git"}
-meshx = {git = "https://github.com/elrnv/meshx.git"}
+meshx = { git = "https://github.com/elrnv/meshx.git" }
+vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "no-lzma" }
