[softy-hdk] Imrpoved error reporting + build
Switched error reporting to use the Display trait.

Adjusted the build to work with alternate targets (cross-compilation).
This is necessary for building intel targets on m1 macs for instance.

--- a/softy-hdk/hdk/CMakeLists.txt
+++ b/softy-hdk/hdk/CMakeLists.txt
@@ -21,6 +21,7 @@ list( APPEND CMAKE_PREFIX_PATH "$ENV{HFS}/toolkit/cmake" )
 file( READ "${CMAKE_BINARY_DIR}/rust/out_dir_hdkrs.txt" hdkrs_OUT_DIR )
 list( APPEND CMAKE_PREFIX_PATH "${hdkrs_OUT_DIR}/cmake")
 
+set( CARGO_TARGET_DIR "${hdkrs_OUT_DIR}/../../..")
 set( Softy_DIR "${CMAKE_SOURCE_DIR}")
 
 # Locate Houdini's libraries and header files.
