--- a/implicits-hdk/hdk/CMakeLists.txt
+++ b/implicits-hdk/hdk/CMakeLists.txt
@@ -21,11 +21,10 @@ list( APPEND CMAKE_PREFIX_PATH "$ENV{HFS}/toolkit/cmake" )
 file( READ "${CMAKE_BINARY_DIR}/rust/out_dir_hdkrs.txt" hdkrs_OUT_DIR )
 list( APPEND CMAKE_PREFIX_PATH "${hdkrs_OUT_DIR}/cmake")
 
+set( CARGO_TARGET_DIR "${hdkrs_OUT_DIR}/../../..")
+
 # Set the directory of the library to be found by find_package
 set( Implicits_DIR "${CMAKE_SOURCE_DIR}" )
-
-file( READ "${CMAKE_BINARY_DIR}/rust/out_dir_hdkrs.txt" hdkrs_OUT_DIR )
-list( APPEND CMAKE_PREFIX_PATH "${hdkrs_OUT_DIR}/cmake" )
 
 # Locate Houdini's libraries and header files.
 # Registers an imported library target named 'Houdini'.
