[softy] Par friction + new sliding + solve refactor
Added a function to compute friction in parallel. (still needs to be
validated). This is only relevant for the homebrew iterative method
using bicgstab.

Added a new quadratic sliding profile for comparison with ipc.

Refactored how solve is chosen in newton method to use the given parameters.

--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+num_cpus = "0.2.13"
 na = { package = "nalgebra", version = "0.29" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
