--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -4,17 +4,21 @@ version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "softy"
+path = "src/lib.rs"
+
 [dependencies]
 num_cpus = "0.2.13"
 na = { package = "nalgebra", version = "0.29" }
-tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
+tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff", "serde"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
 ipopt = { version = "0.5", optional = true }
 geo = { path = "../geo" }
 rayon = "1.5"
 reinterpret = "0.2"
 bytemuck = { version = "1.7", features = ["extern_crate_alloc"] }
-implicits = { path = "../implicits" }
+implicits = { path = "../implicits", features = ["serde_all"] }
 unroll = "0.1"
 approx = "0.5"
 num-traits = "0.2"
@@ -34,6 +38,7 @@ autodiff = { version = "0.4", features = ["na"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.7"
+bincode = { version = "1.3", optional = true }
 partition = "0.1" # Fast in-place slice partitioning.
 mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", features = ["ilp64", "openmp"] }
 
@@ -45,6 +50,7 @@ criterion = "0.3"
 env_logger = "0.9"
 
 [features]
+default = ["bincode"]
 unstable = ["criterion/real_blackbox"]
 optsolver = ["ipopt"]
 
