--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ members = [
     "geo",
     "utils",
     "softy",
+    "softy-eval",
     "softy-hdk",
+    "scene-hdk",
     "implicits",
     "cimplicits",
     "implicits-hdk",
