--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -42,6 +42,9 @@ bincode = { version = "1.3", optional = true }
 partition = "0.1" # Fast in-place slice partitioning.
 mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", features = ["ilp64", "openmp"] }
 
+simd-json = { version = "0.4", optional = true }
+serde_json = { version = "1.0", optional = true }
+
 [target.'cfg(target_os = "macos")'.dependencies]
 accelerate = { package = "accelerate-framework", git = "https://github.com/elrnv/accelerate-rs.git" }
 
