--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -10,14 +10,14 @@ path = "src/lib.rs"
 
 [dependencies]
 num_cpus = "0.2.13"
-na = { package = "nalgebra", version = "0.29" }
+na = { package = "nalgebra", version = "0.30" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff", "serde"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
 ipopt = { version = "0.5", optional = true }
 geo = { path = "../geo" }
 rayon = "1.5"
 reinterpret = "0.2"
-bytemuck = { version = "1.7", features = ["extern_crate_alloc"] }
+bytemuck = { version = "1", features = ["extern_crate_alloc"] }
 implicits = { path = "../implicits", features = ["serde_all"] }
 unroll = "0.1"
 approx = "0.5"
@@ -33,8 +33,8 @@ af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git
 thiserror = "1.0.16"
 lazycell = "1.2"
 log = "0.4"
-hashbrown = "0.11"
-autodiff = { version = "0.4", features = ["na"] }
+ahash = "0.7"
+autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["na"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.7"
@@ -88,7 +88,7 @@ required-features = ["optsolver"]
 name = "multibody"
 required-features = ["optsolver"]
 [[test]]
-name = "one_tet"
+name = "one_tet_opt"
 required-features = ["optsolver"]
 [[test]]
 name = "pinch"
