Added sfrb output + clap + logs + precond bicgstab
- Refactored scene and softy-eval functionality to output a RON/binary
hybrid file called sfrb which is Ron for scene config and binary for
meseh data and animation separated by a newline.
- Migrated from now deprecated structopt to clap v3
- Added more logging functionality, more reported info and output for
softy hdk plugin
- Reworked bicgstab with preconditioning functionality. Now the mass
inverse is being used as a preconditioner.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ debug = true # Change this to true to enable debug symbols in release mode
 rpath = false
 
 [patch.crates-io]
-meshx = { version = "0.4", git = "https://github.com/elrnv/meshx.git" }
+meshx = { version = "0.5", git = "https://github.com/elrnv/meshx.git" }
 vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "no-lzma" }
 
-[patch.'https://github.com/Andlon/mkl-sys']
-mkl-sys = { git = "https://github.com/elrnv/mkl-sys.git" }
+#[patch.'https://github.com/Andlon/mkl-sys']
+#mkl-sys = { git = "https://github.com/elrnv/mkl-sys.git" }
