--- a/softy-eval/Cargo.toml
+++ b/softy-eval/Cargo.toml
@@ -8,9 +8,8 @@ name = "softy"
 path = "src/main.rs"
 
 [dependencies]
-structopt = "0.3"
-anyhow = "1.0"
-terminal_size = "0.1"
+clap = { version = "3", features = ["derive", "wrap_help"] }
+anyhow = "1"
 env_logger = "0.9"
 geo = { path = "../geo" }
-softy = { path = "../softy", features = ["bincode", "serde_json"] }
+softy = { path = "../softy" }
