--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -37,13 +37,14 @@ ahash = "0.7"
 autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["na"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
-ron = "0.7"
-bincode = { version = "1.3", optional = true }
+ron = { git = "https://github.com/elrnv/ron.git", version = "0.7" }
+bincode = "1.3"
 partition = "0.1" # Fast in-place slice partitioning.
-mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", features = ["ilp64", "openmp"] }
+#mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", features = ["ilp64", "openmp"] }
+mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"] }
 
-simd-json = { version = "0.4", optional = true }
-serde_json = { version = "1.0", optional = true }
+#simd-json = { version = "0.4", optional = true }
+#serde_json = { version = "1.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 accelerate = { package = "accelerate-framework", git = "https://github.com/elrnv/accelerate-rs.git" }
@@ -53,7 +54,7 @@ criterion = "0.3"
 env_logger = "0.9"
 
 [features]
-default = ["bincode"]
+default = []
 unstable = ["criterion/real_blackbox"]
 optsolver = ["ipopt"]
 
