--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -40,8 +40,8 @@ serde = { version = "1.0", features = ["derive"] }
 ron = { git = "https://github.com/elrnv/ron.git", version = "0.7" }
 bincode = "1.3"
 partition = "0.1" # Fast in-place slice partitioning.
-#mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", features = ["ilp64", "openmp"] }
-mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"] }
+mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"] }
+#mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"] }
 
 #simd-json = { version = "0.4", optional = true }
 #serde_json = { version = "1.0", optional = true }
