--- a/softy-hdk/Cargo.toml
+++ b/softy-hdk/Cargo.toml
@@ -22,7 +22,7 @@ thiserror = "1.0.16"
 
 [build-dependencies]
 cxx-build = "1.0"
-cmake = { git = "https://github.com/elrnv/cmake-rs.git" }
+cmake = "0.1"
 
 [features]
 optsolver = ["softy/optsolver"]
