--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -40,8 +40,8 @@ serde = { version = "1.0", features = ["derive"] }
 ron = { git = "https://github.com/elrnv/ron.git", version = "0.7" }
 bincode = "1.3"
 partition = "0.1" # Fast in-place slice partitioning.
-mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"] }
-#mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"] }
+mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"], optional = true }
+#mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"], optional = true }
 
 #simd-json = { version = "0.4", optional = true }
 #serde_json = { version = "1.0", optional = true }
@@ -57,6 +57,7 @@ env_logger = "0.9"
 default = ["deterministic"]
 unstable = ["criterion/real_blackbox"]
 optsolver = ["ipopt"]
+mkl = ["mkl-corrode"]
 deterministic = [] # Enables seeded random state.
 
 [[bench]]
