--- a/softy-eval/Cargo.toml
+++ b/softy-eval/Cargo.toml
@@ -12,4 +12,4 @@ clap = { version = "3", features = ["derive", "wrap_help"] }
 anyhow = "1"
 env_logger = "0.9"
 geo = { path = "../geo" }
-softy = { path = "../softy" }
+softy = { path = "../softy", features = ["mkl"] }
