[softy-hdk] Fix windows build
Added bcrypt as an explicit library to be linked
Added intel's omp lib for proper linking (found using find_package(MKL))

--- a/softy-hdk/hdk/CMakeLists.txt
+++ b/softy-hdk/hdk/CMakeLists.txt
@@ -54,7 +54,9 @@ target_link_libraries( ${library_name}
 
 if(WIN32)
     # Add Rust specific Windows system dependencies.
-    target_link_libraries( ${library_name} PRIVATE Ws2_32 userenv )
+    find_package( MKL REQUIRED )
+    target_link_libraries( ${library_name} PRIVATE ${OMP_LIBRARY})
+    target_link_libraries( ${library_name} PRIVATE Ws2_32 userenv bcrypt )
 endif(WIN32)
 
 message(STATUS "${hdkrs_INCLUDE_DIRS}")
