--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -9,7 +9,7 @@ name = "cimplicits"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-geo = { path = "../geo" }
+geo = { workspace = true }
 implicits = { path = "../implicits" }
 bytemuck = "1"
 cxx = { version = "1.0", optional = true }
