--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -7,20 +7,20 @@ license = "MPL-2.0"
 
 [dependencies]
 rayon = "1.5"
-na = { package = "nalgebra", version = "0.30" }
-hrbf = "0.7"
-geo = { path = "../geo" }
+na = { package = "nalgebra", version = "0.32" }
+hrbf = "0.8"
+geo = { workspace = true }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5", features = ["rayon"] }
-rstar = "0.9"
+rstar = "0.11"
 autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["bytemuck", "na"] }
 num-traits = "0.2"
 utils = { path = "../utils", features = ["autodiff"] }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
-thiserror = "1.0"
+thiserror = "1.0.16"
 arrayvec = "0.7"
 log = "0.4"
-ahash = "0.7"
+ahash = "0.8"
 
 [dev-dependencies]
 approx = "0.5"
