--- a/softy-eval/Cargo.toml
+++ b/softy-eval/Cargo.toml
@@ -10,6 +10,6 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "3", features = ["derive", "wrap_help"] }
 anyhow = "1"
-env_logger = "0.9"
-geo = { path = "../geo" }
+env_logger = "0.10"
+geo = { workspace = true }
 softy = { path = "../softy", features = ["mkl"] }
