--- a/softy-hdk/Cargo.toml
+++ b/softy-hdk/Cargo.toml
@@ -9,7 +9,7 @@ name = "softyhdk"
 crate-type = ["staticlib", "rlib"]
 
 [dependencies]
-geo = { path = "../geo" }
+geo = { workspace = true }
 utils = { path = "../utils" }
 softy = { path = "../softy" }
 libc = "*"
@@ -23,6 +23,3 @@ thiserror = "1.0.16"
 [build-dependencies]
 cxx-build = "1.0"
 cmake = "0.1"
-
-[features]
-optsolver = ["softy/optsolver"]
