--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -9,12 +9,11 @@ name = "softy"
 path = "src/lib.rs"
 
 [dependencies]
-num_cpus = "0.2.13"
-na = { package = "nalgebra", version = "0.30" }
+num_cpus = "1"
+na = { package = "nalgebra", version = "0.32" }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff", "serde"] }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
-ipopt = { version = "0.5", optional = true }
-geo = { path = "../geo" }
+geo = { workspace = true }
 rayon = "1.5"
 reinterpret = "0.2"
 bytemuck = { version = "1", features = ["extern_crate_alloc"] }
@@ -23,17 +22,16 @@ unroll = "0.1"
 approx = "0.5"
 num-traits = "0.2"
 #jemallocator = "0.3"
-image = "0.23" # For visualizing large sparse matrices
+image = "0.24" # For visualizing large sparse matrices
 utils = { path = "../utils" }
 is_sorted = "0.1"
-sprs = "0.10"
-sprs-ldl = "0.9"
+sprs = "0.11"
+sprs-ldl = "0.10"
 ndarray = "0.15"
-af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
 thiserror = "1.0.16"
 lazycell = "1.2"
 log = "0.4"
-ahash = "0.7"
+ahash = "0.8"
 autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["na"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
@@ -52,12 +50,11 @@ mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["i
 
 [dev-dependencies]
 criterion = "0.3"
-env_logger = "0.9"
+env_logger = "0.10"
 
 [features]
 default = ["deterministic", "mkl"]
 unstable = ["criterion/real_blackbox"]
-optsolver = ["ipopt"]
 mkl = ["mkl-corrode"]
 deterministic = [] # Enables seeded random state.
 
@@ -72,37 +69,3 @@ harness = false
 [[bench]]
 name = "energy_hessian"
 harness = false
-
-[[test]]
-name = "rigid"
-required-features = ["optsolver"]
-[[test]]
-name = "bend_opt"
-required-features = ["optsolver"]
-[[test]]
-name = "box_opt"
-required-features = ["optsolver"]
-[[test]]
-name = "contact_opt"
-required-features = ["optsolver"]
-[[test]]
-name = "friction"
-required-features = ["optsolver"]
-[[test]]
-name = "multibody"
-required-features = ["optsolver"]
-[[test]]
-name = "one_tet_opt"
-required-features = ["optsolver"]
-[[test]]
-name = "pinch"
-required-features = ["optsolver"]
-[[test]]
-name = "sim"
-required-features = ["optsolver"]
-[[test]]
-name = "three_tets_tetmesh"
-required-features = ["optsolver"]
-[[test]]
-name = "tube"
-required-features = ["optsolver"]
