--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2018"
 license = "MPL-2.0"
 
 [dependencies]
-geo = { path = "../geo" }
+geo = { workspace = true }
 rand = "0.8"
 typenum = "1.12"
 reinterpret = "0.2"
-sprs = { version = "0.10", optional = true }
-image = "0.23"
+sprs = { version = "0.11", optional = true }
+image = "0.24"
 unroll = "0.1"
 num-traits = "0.2"
 rayon = "1.5"
 autodiff = { git = "https://github.com/elrnv/autodiff.git", optional = true }
 packed_simd = { version = "0.3", optional = true }
-approx = { version = "0.4", optional = true }
+approx = { version = "0.5", optional = true }
 tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
 
 [dev-dependencies]
