Large refactor for contact parameters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ debug = true # Change this to true to enable debug symbols in release mode
 rpath = false
 
 [patch.crates-io]
-# vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "no-lzma" }
 # Ensure that downstream dependencies on meshx are the same as what we use for compatibility.
 meshx = { version = "0.6", git = "https://github.com/elrnv/meshx.git", branch = "vtkio-0.7" }
+
+[patch.'https://github.com/elrnv/vtkio.git']
+vtkio = { version = "0.7", git = "https://github.com//elrnv/vtkio.git", branch = "no-lzma" }
 
 #[patch.'https://github.com/Andlon/mkl-sys']
 #mkl-sys = { git = "https://github.com/elrnv/mkl-sys.git" }
