--- a/scene-hdk/Cargo.toml
+++ b/scene-hdk/Cargo.toml
@@ -21,4 +21,4 @@ thiserror = "1.0.16"
 
 [build-dependencies]
 cxx-build = "1.0"
-cmake = { git = "https://github.com/elrnv/cmake-rs.git" }
+cmake = "0.1"
