Set resolver to version 2 in root manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ members = [
     "benchmark",
 ]
 
+resolver = "2"
+
 [profile.release]
 debug = true # Change this to true to enable debug symbols in release mode
 rpath = false
