--- a/implicits-hdk/hdk/CMakeLists.txt
+++ b/implicits-hdk/hdk/CMakeLists.txt
@@ -55,7 +55,7 @@ target_link_libraries( ${library_name}
 
 if(WIN32)
     # Add Rust specific Windows system dependencies.
-    target_link_libraries( ${library_name} PRIVATE Ws2_32 userenv )
+    target_link_libraries( ${library_name} PRIVATE Ws2_32 userenv bcrypt ntdll)
 endif(WIN32)
 
 # Include ${CMAKE_CURRENT_BINARY_DIR} for the generated header.
