--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -43,7 +43,7 @@ partition = "0.1" # Fast in-place slice partitioning.
 #serde_json = { version = "1.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-accelerate = { package = "accelerate-framework", git = "https://github.com/elrnv/accelerate-rs.git" }
+accelerate = { package = "accelerate-framework", version = "0.2" }
 
 [target.'cfg(not(target_os = "macos"))'.dependencies]
 mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "openmp"], optional = true }
